tests/algorithms/x/C/bit_manipulation/binary_shifts.c
// Generated by Mochi 0.10.32 on 2025-08-06 20:15 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

const char* repeat_char(const char* ch, long long count);
long long abs_int(long long n);
long long pow2(long long exp);
const char* to_binary_no_prefix(long long n);
const char* logical_left_shift(long long number, long long shift_amount);
const char* logical_right_shift(long long number, long long shift_amount);
const char* arithmetic_right_shift(long long number, long long shift_amount);
void user_main();
int main(void);

const char* repeat_char(const char* ch, long long count) {
    const char* res = "";
    long long i = 0LL;
    while (i < count) {
        res = str_concat(res, ch);
        i = i + 1LL;
    }
    return res;
}

long long abs_int(long long n) {
    if (n < 0LL) {
        return -(n);
    }
    return n;
}

long long pow2(long long exp) {
    long long res = 1LL;
    long long i = 0LL;
    while (i < exp) {
        res = res * 2LL;
        i = i + 1LL;
    }
    return res;
}

const char* to_binary_no_prefix(long long n) {
    long long v = n;
    if (v < 0LL) {
        v = -(v);
    }
    if (v == 0LL) {
        return "0";
    }
    const char* res = "";
    while (v > 0LL) {
        res = str_concat(str_int(v % 2LL), res);
        v = v / 2LL;
    }
    return res;
}

const char* logical_left_shift(long long number, long long shift_amount) {
    if ((number < 0LL) || (shift_amount < 0LL)) {
        panic("both inputs must be positive integers");
    }
    const char* binary_number = str_concat("0b", to_binary_no_prefix(number));
    return str_concat(binary_number, repeat_char("0", shift_amount));
}

const char* logical_right_shift(long long number, long long shift_amount) {
    if ((number < 0LL) || (shift_amount < 0LL)) {
        panic("both inputs must be positive integers");
    }
    const char *binary_number = to_binary_no_prefix(number);
    size_t binary_number_len = binary_number ? strlen(binary_number) : 0;
    if (shift_amount >= binary_number_len) {
        return "0b0";
    }
    const char* shifted = _substring(binary_number, 0LL, binary_number_len - shift_amount);
    return str_concat("0b", shifted);
}

const char* arithmetic_right_shift(long long number, long long shift_amount) {
    const char* binary_number = "";
    if (number >= 0LL) {
        binary_number = str_concat("0", to_binary_no_prefix(number));
    } else {
        long long length = (to_binary_no_prefix(-(number)), to_binary_no_prefix_len);
        long long intermediate = abs_int(number) - pow2(length);
        const char *bin_repr = to_binary_no_prefix(intermediate);
        size_t bin_repr_len = bin_repr ? strlen(bin_repr) : 0;
        binary_number = str_concat(str_concat("1", repeat_char("0", length - bin_repr_len)), str_int(bin_repr));
    }
    if (shift_amount >= strlen(binary_number)) {
        const char* sign = _substring(binary_number, 0LL, 1LL);
        return str_concat("0b", repeat_char(sign, strlen(binary_number)));
    }
    const char* sign = _substring(binary_number, 0LL, 1LL);
    const char* shifted = _substring(binary_number, 0LL, strlen(binary_number) - shift_amount);
    return str_concat(str_concat("0b", repeat_char(sign, shift_amount)), shifted);
}

void user_main() {
    puts(logical_left_shift(17LL, 2LL));
    puts(logical_right_shift(1983LL, 4LL));
    puts(arithmetic_right_shift(-17LL, 2LL));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
